--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "single-spa-react-app",
-  "version": "0.1.3",
+  "name": "rh-uxd-react-app",
+  "version": "0.1.4",
   "description": "React application with two example pages for be included in a single-spa application as registered app.",
-  "main": "dist/single-spa-react-app.js",
+  "main": "dist/rh-uxd-react-app.js",
   "dependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -16,14 +16,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jualoppaz/single-spa-react-app.git"
+    "url": "git+https://github.com/christiemolloy/single-spa-react-app.git"
   },
-  "author": "Juan Manuel López Pazos",
+  "author": "Christie molloy",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jualoppaz/single-spa-react-app/issues"
+    "url": "https://github.com/christiemolloy/single-spa-react-app/issues"
   },
-  "homepage": "https://github.com/jualoppaz/single-spa-react-app#readme",
+  "homepage": "https://github.com/christiemolloy/single-spa-react-app#readme",
   "browserslist": {
     "production": [
       ">0.2%",
